# internal/model/order_model.go
@@ -7,22 +7,32 @@ import (
 	"gorm.io/gorm"
 )
 
+// Order Model godoc
+// @Description Order Model
 type Order struct {
-	ID           uint           `json:"id" gorm:"primarykey"`
-	CustomerName string         `json:"customer_name" gorm:"type:varchar(100);not null"`
-	OrderedAt    time.Time      `json:"ordered_at" gorm:"autoCreateTime"`
-	Items        []Item         `json:"items" gorm:"foreignKey:OrderID"`
-	CreatedAt    time.Time      `json:"created_at"`
-	UpdatedAt    time.Time      `json:"updated_at"`
-	DeletedAt    gorm.DeletedAt `gorm:"index"`
-}
+	ID           int            `gorm:"primarykey" swaggerignore:"true" json:"-"`
+	CustomerName string         `gorm:"type:varchar(100);not null" json:"customer_name" example:"John Doe"`     // Customer Name
+	OrderedAt    time.Time      `gorm:"autoCreateTime" json:"ordered_at" example:"2022-10-10T11:52:28.431369Z"` // Ordered At
+	Items        []Item         `gorm:"foreignKey:OrderID" json:"items"`                                        // Items
+	CreatedAt    time.Time      `gorm:"autoCreateTime" swaggerignore:"true" json:"-"`
+	UpdatedAt    time.Time      `gorm:"autoUpdateTime" swaggerignore:"true" json:"-"`
+	DeletedAt    gorm.DeletedAt `gorm:"index" swaggerignore:"true" json:"-"`
+} // @name OrderResponse
 
+// OrderRequest Model godoc
+// @Description OrderRequest Model
+type OrderRequest struct {
+	CustomerName string `json:"customer_name" example:"John Doe"` // Customer Name
+	Items        []Item `json:"items"`                            // Items
+} // @name OrderRequest
+
+// Get all orders
 func (o *Order) GetAll() ([]*Order, error) {
 	ctx, cancel := context.WithTimeout(context.Background(), dbTimeout)
 	defer cancel()
 
 	var orders []*Order
-	result := db.WithContext(ctx).Model(&o).Find(&orders)
+	result := db.WithContext(ctx).Model(&o).Preload("Items").Find(&orders)
 	if result.Error != nil {
 		return nil, result.Error
 	}
@@ -30,11 +40,12 @@ func (o *Order) GetAll() ([]*Order, error) {
 	return orders, nil
 }
 
+// Create a new order
 func (o *Order) Create(order Order) (*Order, error) {
 	ctx, cancel := context.WithTimeout(context.Background(), dbTimeout)
 	defer cancel()
 
-	result := db.WithContext(ctx).Create(&order)
+	result := db.Debug().WithContext(ctx).Create(&order)
 	if result.Error != nil {
 		return nil, result.Error
 	}
@@ -42,23 +53,34 @@ func (o *Order) Create(order Order) (*Order, error) {
 	return &order, nil
 }
 
-func (o *Order) Update(order Order) (*Order, error) {
+// Update an order
+func (o *Order) Update(id int, order Order) (*Order, error) {
 	ctx, cancel := context.WithTimeout(context.Background(), dbTimeout)
 	defer cancel()
 
-	result := db.WithContext(ctx).Save(&order)
+	result := db.Debug().WithContext(ctx).Model(&o).Where("id = ?", id).Updates(order)
 	if result.Error != nil {
 		return nil, result.Error
+	}
+
+	// Update the items of the order
+	for _, item := range order.Items {
+		item.OrderID = id
+		_, err := item.Update(item)
+		if err != nil {
+			return nil, err
+		}
 	}
 
 	return &order, nil
 }
 
+// Delete an order by id
 func (o *Order) Delete(order Order) error {
 	ctx, cancel := context.WithTimeout(context.Background(), dbTimeout)
 	defer cancel()
 
-	result := db.WithContext(ctx).Delete(&order)
+	result := db.Debug().WithContext(ctx).Select("Items").Delete(&order)
 	if result.Error != nil {
 		return result.Error
 	}
